--- a/db/db-project/app_users.metadata.json
+++ b/db/db-project/app_users.metadata.json
@@ -1,1 +1,1 @@
-{"options":{},"indexes":[{"v":{"$numberInt":"2"},"key":{"_id":{"$numberInt":"1"}},"name":"_id_"}],"uuid":"60e8c894a3e9417292d35e51c5b25b36"}
+{"options":{},"indexes":[{"v":{"$numberInt":"2"},"key":{"_id":{"$numberInt":"1"}},"name":"_id_"},{"v":{"$numberInt":"2"},"unique":true,"key":{"username":{"$numberInt":"1"}},"name":"username_1"}],"uuid":"e324bf9bf08a4972b4cd49ac4528c0e7"}
