--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,7 +1,8 @@
 FROM python:3.7-slim
-RUN mkdir /usr/src/app/
-COPY . /usr/src/app/
-WORKDIR /usr/src/app/
+ENV PYTHONPATH "${PYTHONPATH}:/usr/src/api/"
+RUN mkdir /usr/src/api/
+COPY . /usr/src/api/
+WORKDIR /usr/src/api/
 EXPOSE 5000
 RUN python -m pip install --upgrade pip
 RUN pip install -r requirements.txt
