--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,9 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.0.0",
     "react-scripts": "^4.0.3",
-    "web-vitals": "^1.0.1"
+    "recharts": "^2.1.6",
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.17"
   },
   "scripts": {
     "start": "react-scripts start",
