--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.0.0",
     "react-scripts": "^4.0.3",
     "recharts": "^2.1.6",
+    "vis-network": "^9.0.4",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.17"
   },
