--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,32 +1,67 @@
-Flask==1.1.1
-Flask-BabelEx==0.9.3
-Flask-Cors==3.0.8
-Flask-Gravatar==0.5.0
-Flask-HTMLmin==1.5.2
-Flask-Login==0.4.1
-Flask-Mail==0.9.1
-Flask-Migrate==2.5.2
-Flask-MySQL==1.5.0
-Flask-Paranoid==0.2.0
-Flask-Principal==0.4.0
-flask-restplus==0.13.0
-Flask-Security==3.0.0
-Flask-SQLAlchemy==2.4.1
-Flask-WTF==0.14.2
-gunicorn==20.0.4
-PyYAML==5.3
-sqlparse==0.3.0
-sshtunnel==0.1.5
-typed-ast==1.4.1
-watchdog==0.9.0
-webencodings==0.5.1
-Werkzeug==0.16.0
-WTForms==2.2.1
-pymongo==3.11.3
-greenlet==1.1.2
-importlib-metadata==4.8.1
-typing-extensions==3.10.0.2
-zipp==3.6.0
-pycryptodome==3.11.0
-napalm==3.3.1
-pysnmp==4.4.10
+alembic==1.8.0
+aniso8601==9.0.1
+argh==0.26.2
+attrs==21.4.0
+Babel==2.10.1
+bcrypt==3.2.2
+blinker==1.4
+certifi==2022.5.18.1
+cffi==1.15.0
+charset-normalizer==2.0.12
+ciscoconfparse==1.6.40
+click==8.1.3
+cryptography==37.0.2
+dnspython==2.2.1
+Flask==2.1.2
+flask-restx==0.5.1
+future==0.18.2
+gunicorn==20.1.0
+htmlmin==0.1.12
+idna==3.3
+importlib-metadata==4.11.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+jsonschema==4.6.0
+junos-eznc==2.6.3
+loguru==0.6.0
+lxml==4.9.0
+Mako==1.2.0
+MarkupSafe==2.1.1
+napalm==3.4.1
+ncclient==0.6.9
+netaddr==0.8.0
+netmiko==3.4.0
+ntc-templates==3.0.0
+paramiko==2.11.0
+passlib==1.7.4
+pathtools==0.1.2
+ply==3.11
+pyasn1==0.4.8
+pycparser==2.21
+pycryptodome==3.14.1
+pycryptodomex==3.14.1
+pyeapi==0.8.4
+pymongo==4.1.1
+PyMySQL==1.0.2
+PyNaCl==1.5.0
+pyparsing==3.0.9
+pyrsistent==0.18.1
+pyserial==3.5
+pysmi==0.3.4
+pysnmp==4.4.12
+pytz==2022.1
+PyYAML==6.0
+requests==2.27.1
+scp==0.14.4
+six==1.16.0
+speaklater==1.3
+SQLAlchemy==1.4.37
+sshtunnel==0.4.0
+tenacity==8.0.1
+textfsm==1.1.2
+toml==0.10.2
+transitions==0.8.11
+urllib3==1.26.9
+Werkzeug==2.1.2
+yamlordereddictloader==0.4.0
+zipp==3.8.0
