--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
       - project-network
     environment:
       REACT_APP_API: http://localhost:5000/api/
-      CHOKIDAR_USEPOLLING: true
+      CHOKIDAR_USEPOLLING: "true"
 
 networks:
   project-network:
