--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -13,6 +13,7 @@ click==8.1.3
 cryptography==37.0.2
 dnspython==2.2.1
 Flask==2.1.2
+flask-cors==3.0.10
 flask-restx==0.5.1
 future==0.18.2
 gunicorn==20.1.0
